--- a/Source/Enter.UI/Components/Buttons/EntButton.razor
+++ b/Source/Enter.UI/Components/Buttons/EntButton.razor
@@ -30,17 +30,17 @@
         
         .AddClass("ent-btn-primary",Mode==ButtonMode.Solid && Color == ButtonColor.Primary)
         .AddClass("ent-btn-secondary",Mode==ButtonMode.Solid && Color == ButtonColor.Secondary)
-        .AddClass("ent-btn-tertiary",Mode==ButtonMode.Solid && Color == ButtonColor.Tertiary)
         .AddClass("ent-btn-light",Mode==ButtonMode.Solid && Color == ButtonColor.Light)
         .AddClass("ent-btn-dark",Mode==ButtonMode.Solid && Color == ButtonColor.Dark)
         .AddClass("ent-btn-success",Mode==ButtonMode.Solid && Color == ButtonColor.Success)
         .AddClass("ent-btn-danger",Mode==ButtonMode.Solid && Color == ButtonColor.Danger)
         .AddClass("ent-btn-warning",Mode==ButtonMode.Solid && Color == ButtonColor.Warning)
         .AddClass("ent-btn-info",Mode==ButtonMode.Solid && Color == ButtonColor.Info)
+        .AddClass("ent-btn-link",Mode==ButtonMode.Solid && Color == ButtonColor.Link)
         
         .AddClass("ent-btn-outline-primary",Mode==ButtonMode.Outline && Color == ButtonColor.Primary)
         .AddClass("ent-btn-outline-secondary",Mode==ButtonMode.Outline && Color == ButtonColor.Secondary)
-        .AddClass("ent-btn-outline-tertiary",Mode==ButtonMode.Outline && Color == ButtonColor.Tertiary)
+        .AddClass("ent-btn-outline-link",Mode==ButtonMode.Outline && Color == ButtonColor.Link)
         .AddClass("ent-btn-outline-light",Mode==ButtonMode.Outline && Color == ButtonColor.Light)
         .AddClass("ent-btn-outline-dark",Mode==ButtonMode.Outline && Color == ButtonColor.Dark)
         .AddClass("ent-btn-outline-success",Mode==ButtonMode.Outline && Color == ButtonColor.Success)
@@ -51,7 +51,7 @@
         
         .AddClass("ent-btn-soft-primary",Mode==ButtonMode.Soft && Color == ButtonColor.Primary)
         .AddClass("ent-btn-soft-secondary",Mode==ButtonMode.Soft && Color == ButtonColor.Secondary)
-        .AddClass("ent-btn-soft-tertiary",Mode==ButtonMode.Soft && Color == ButtonColor.Tertiary)
+        .AddClass("ent-btn-soft-link",Mode==ButtonMode.Soft && Color == ButtonColor.Link)
         .AddClass("ent-btn-soft-light",Mode==ButtonMode.Soft && Color == ButtonColor.Light)
         .AddClass("ent-btn-soft-dark",Mode==ButtonMode.Soft && Color == ButtonColor.Dark)
         .AddClass("ent-btn-soft-success",Mode==ButtonMode.Soft && Color == ButtonColor.Success)
