--- a/Source/Enter.UI/wwwroot/styles/Enter.Ui.scss
+++ b/Source/Enter.UI/wwwroot/styles/Enter.Ui.scss
@@ -85,7 +85,7 @@ small, .text_small {
 
 code {
   color: var(--ent-primary);
-  background: var(--ent-primary-bg-subtle);
+  background: var(--ent-primary-subtle);
   padding: 0.25rem;
   border-radius: 0.25rem;
   font-size: 0.72rem;
