--- a/Source/Enter.UI/wwwroot/styles/components/_ent_nav_menu.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_nav_menu.component.scss
@@ -56,7 +56,7 @@
       
       &.active {
         > .ent-nav-menu-item {
-          background-color: var(--ent-bg-tertiary);
+          background-color: var(--ent-light-subtle);
         }
       }
       
