--- a/Source/Enter.UI/wwwroot/styles/components/_ent_pagination.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_pagination.component.scss
@@ -19,7 +19,7 @@
             }
         }
          &:hover {
-            background-color: var(--ent-bg-tertiary);
+            background-color: var(--ent-light-subtle);
         }
     }
     .ent-pagination-item:last-child {
