--- a/Source/Enter.UI/wwwroot/styles/components/_ent_shimmer.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_shimmer.component.scss
@@ -1,5 +1,5 @@
 .ent-shimmer {
-  background-color: var(--ent-bg-secondary);
+  background-color: var(--ent-light-emphasis);
   display: block;
 
  
