--- a/Source/Enter.UI/wwwroot/styles/components/_ent_tab.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_tab.component.scss
@@ -2,7 +2,7 @@
 :root {
   --ent-tab-bg: var(--ent-bg-body);
   --ent-tab-container-bg: var(--ent-bg-body);
-  --ent-tab-active-bg: var(--ent-bg-tertiary);
+  --ent-tab-active-bg: var(--ent-light-subtle);
   --ent-tab-box-shadow: var(--ent-shadow);
   --ent-tab-border-width: var(--ent-border-width);
   --ent-tab-border-style: var(--ent-border-style);
