--- a/Source/Enter.UI/wwwroot/styles/components/_ent_table.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_table.component.scss
@@ -7,7 +7,7 @@
   vertical-align: middle;
 
   thead {
-    background-color: var(--ent-bg-tertiary);
+    background-color: var(--ent-light-subtle);
   }
 
   th, td {
