--- a/Source/Enter.UI/wwwroot/styles/components/_ent_toolbar.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_toolbar.component.scss
@@ -2,9 +2,9 @@
   --ent-toolbar-space-y: 0.375rem;
   --ent-toolbar-space-x: 1rem;
   --ent-toolbar-z-index: var(--ent-z-index-tertiary);
-  --ent-toolbar-bg: var(--ent-bg-tertiary);
+  --ent-toolbar-bg: var(--ent-light-subtle);
   --ent-toolbar-button-bg: var(--ent-bg-body);
-  --ent-toolbar-active-bg: var(--ent-bg-secondary);
+  --ent-toolbar-active-bg: var(--ent-light-emphasis);
   --ent-toolbar-border-width: var(--ent-border-width);
   --ent-toolbar-border-style: var(--ent-border-style);
   --ent-toolbar-border-color: var(--ent-border-color);
