--- a/example/Enter.Dashboard/Pages/Documents/ButtonPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/ButtonPage.razor
@@ -12,13 +12,13 @@
             <EntFlex Gap="2">
                 <EntButton Color="ButtonColor.Primary">Primary</EntButton>
                 <EntButton Color="ButtonColor.Secondary">Secondary</EntButton>
-                <EntButton Color="ButtonColor.Tertiary">Tertiary</EntButton>
                 <EntButton Color="ButtonColor.Danger">Danger</EntButton>
                 <EntButton Color="ButtonColor.Success">Success</EntButton>
                 <EntButton Color="ButtonColor.Warning">Warning</EntButton>
                 <EntButton Color="ButtonColor.Info">Info</EntButton>
                 <EntButton Color="ButtonColor.Light">Light</EntButton>
                 <EntButton Color="ButtonColor.Dark">Dark</EntButton>
+                <EntButton Color="ButtonColor.Link">Link</EntButton>
             </EntFlex>
         </CardBody>
 
@@ -32,13 +32,13 @@
             <EntFlex Gap="2">
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Primary">Primary</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Secondary">Secondary</EntButton>
-                <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Tertiary">Tertiary</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Danger">Danger</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Success">Success</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Warning">Warning</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Info">Info</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Light">Light</EntButton>
                 <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Dark">Dark</EntButton>
+                <EntButton Mode="ButtonMode.Outline" Color="ButtonColor.Link">Link</EntButton>
             </EntFlex>
         </CardBody>
     </EntCard>
@@ -51,13 +51,13 @@
                 <EntFlex Gap="2">
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Primary">Primary</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Secondary">Secondary</EntButton>
-                    <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Tertiary">Tertiary</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Danger">Danger</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Success">Success</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Warning">Warning</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Info">Info</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Light">Light</EntButton>
                     <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Dark">Dark</EntButton>
+                    <EntButton Mode="ButtonMode.Soft" Color="ButtonColor.Link">Link</EntButton>
                 </EntFlex>
             </CardBody>
         </EntCard>
