--- a/example/Enter.Dashboard/Pages/Index.razor
+++ b/example/Enter.Dashboard/Pages/Index.razor
@@ -9,7 +9,7 @@
 @using Enter.UI.Abstractions.Components.Drawer
 @using Enter.UI.Abstractions.Components.Loading
 @using Enter.UI.Abstractions.Components.Shimmer
-@* @layout MainLayout *@
+@layout MainLayout
 <PageTitle>Index</PageTitle>
 
 <EntFlex class="h-full" Direction="FlexDirection.Column">
