--- a/Source/Enter.UI/wwwroot/styles/components/_ent_treeview.component.scss
+++ b/Source/Enter.UI/wwwroot/styles/components/_ent_treeview.component.scss
@@ -15,7 +15,7 @@
         align-items: center;
 
         &.active {
-            background-color: var(--ent-bg-secondary);
+            background-color: var(--ent-light-emphasis);
         }
         
         &.expanded {
